responses wrap by page response class